Milestone: Working integration of RDF into search with 0 terminology ids