@@ -1,6 +1,7 @@
 --enable-preview
 --enable-native-access=ALL-UNNAMED
 --add-modules jdk.incubator.vector
+--add-opens java.base/sun.misc=ALL-UNNAMED
 -Xmx46g
 -Xms1g
 -XX:+UseG1GC
